ci(coverage-pages): call reportgenerator via absolute path and add debug logs to fix exit code 127

--- a/.github/workflows/coverage-pages.yml
+++ b/.github/workflows/coverage-pages.yml
@@ -47,9 +47,16 @@ jobs:
           dotnet tool install -g dotnet-reportgenerator-globaltool
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
+      - name: Debug PATH and coverage files
+        run: |
+          which dotnet || true
+          echo "PATH=$PATH"
+          ls -la $HOME/.dotnet/tools || true
+          ls -R Tests/MusicTheory.Tests/TestResults || true
+
       - name: Generate coverage report (Html/XmlSummary/Badges)
         run: |
-          reportgenerator \
+          "$HOME/.dotnet/tools/reportgenerator" \
             -reports:Tests/MusicTheory.Tests/TestResults/**/coverage.cobertura.xml \
             -targetdir:Tests/MusicTheory.Tests/TestResults/coverage-report \
             -reporttypes:Html;XmlSummary;Badges
