Upgrade coverage gate to 75% across all workflows and docs
- README: Update coverage gate section to 75%, add Pages pre-publish gate note, clarify public/local tasks

- CI/Pages: Enforce 75% threshold in all workflows (ci.yml, coverage-pages.yml, dotnet.yml)

- Scripts/CheckCoverage.ps1: Raise default threshold to 75.0, enhance XmlSummary parsing for new/legacy formats

- Add Scripts/GetLocalCoverage.ps1 for local Summary.xml inspection

- tasks.json: Mark 70% check as [legacy], add 75%/80% check tasks

--- a/.github/workflows/coverage-pages.yml
+++ b/.github/workflows/coverage-pages.yml
@@ -63,6 +63,11 @@ jobs:
             -targetdir:"site/coverage" \
             -reporttypes:"Html;XmlSummary;Badges"
 
+      - name: Enforce Coverage >= 75% before publish
+        shell: bash
+        run: |
+          pwsh -NoProfile -ExecutionPolicy Bypass -File ./Scripts/CheckCoverage.ps1 -Threshold 75 -SummaryPath 'site/coverage/Summary.xml' -CoberturaRoot 'Tests/MusicTheory.Tests/TestResults'
+
       - name: Prepare site index
         run: |
           mkdir -p site
