--- a/.github/workflows/coverage-pages.yml
+++ b/.github/workflows/coverage-pages.yml
@@ -63,7 +63,19 @@ jobs:
       - name: Enforce Coverage >= 75% before publish
         shell: bash
         run: |
-          pwsh -NoProfile -ExecutionPolicy Bypass -File ./Scripts/CheckCoverage.ps1 -Threshold 75 -SummaryPath 'site/coverage/Summary.xml' -CoberturaRoot 'Tests/MusicTheory.Tests/TestResults'
+          # Parse line coverage from Summary.xml
+          coverage=$(grep -oP '(?<=<Linecoverage>)[0-9.]+' site/coverage/Summary.xml)
+          threshold=75.0
+          
+          echo "Line coverage: ${coverage}% (threshold: ${threshold}%)"
+          
+          # Compare using bc (basic calculator)
+          if (( $(echo "$coverage < $threshold" | bc -l) )); then
+            echo "❌ Coverage below threshold."
+            exit 1
+          fi
+          
+          echo "✅ Coverage check passed!"
 
       - name: Prepare site index
         run: |
